// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message component fromAgent colors the message according to quiqOptions 1`] = `
<div
  className="messageContainer"
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-start",
        "marginRight": "auto",
      }
    }
  >
    <div
      className="agentAvatar"
      style={Object {}}
    />
    <div
      className="Message"
      style={
        Object {
          "background": "#fff",
          "backgroundColor": "#0085f4",
          "border": "1px solid #e0e0e0",
          "maxWidth": 350,
        }
      }
    >
      <Linkify
        className="Linkify"
        component="a"
        properties={
          Object {
            "rel": "noopener noreferrer",
            "style": Object {
              "color": "#fff",
              "fontFamily": "Source Sans Pro",
              "textDecoration": "underline",
            },
            "target": "_blank",
          }
        }
      >
        <span
          style={
            Object {
              "color": "#555",
              "fontFamily": "Source Sans Pro",
            }
          }
        >
          text--0
        </span>
      </Linkify>
    </div>
  </div>
</div>
`;

exports[`Message component rendering renders with default props 1`] = `
<div
  className="messageContainer fromCustomer"
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
        "marginLeft": "auto",
      }
    }
  >
    <div
      className="Message fromCustomer"
      style={
        Object {
          "background": "#68b588",
          "backgroundColor": "#f5f5f5",
          "maxWidth": 318,
        }
      }
    >
      <Linkify
        className="Linkify"
        component="a"
        properties={
          Object {
            "rel": "noopener noreferrer",
            "style": Object {
              "color": "#0085f4",
              "fontFamily": "Source Sans Pro",
              "textDecoration": "underline",
            },
            "target": "_blank",
          }
        }
      >
        <span
          style={
            Object {
              "color": "#fff",
              "fontFamily": "Source Sans Pro",
            }
          }
        >
          text--0
        </span>
      </Linkify>
    </div>
    <div
      className="customerAvatar"
      style={Object {}}
    />
  </div>
</div>
`;
